Added GetAuthCode route
Added getAccessToken route to  retrieve access token from Auth0

Handled few more errors.

Added UTC
