# secure-api-swagger.json
@@ -14,6 +14,66 @@
             }
         },
         "responses": {
+            "ForbiddenError": {
+                "description": "Access Forbidden",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string",
+                                    "example": "403"
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "example": "Access Forbidden"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "TimeOutError": {
+                "description": "Request timed out",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string",
+                                    "example": "408"
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "example": "Request timed out"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "BadRequestError": {
+                "description": "Bad Request, invalid request parameters",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string",
+                                    "example": "400"
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "example": "Bad Request"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "UnauthorizedError": {
                 "description": "Authentication information is missing or invalid",
                 "content": {
@@ -82,24 +142,57 @@
         }
     ],
     "paths": {
-        "/": {
+        "/getAccessToken": {
             "get": {
-                "summary": "Public Endpoint",
-                "description": "This endpoint is publicly accessible and returns a simple message.",
+                "summary": "Fetch OAuth Token",
+                "description": "This endpoint calls an external OAuth token API to fetch an access token and returns it.",
                 "tags": [
                     "Public Endpoints"
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful response",
+                        "description": "Successful response with OAuth token data",
                         "content": {
-                            "text/plain": {
+                            "application/json": {
                                 "schema": {
-                                    "type": "string",
-                                    "example": "Public Endpoint"
+                                    "type": "object",
+                                    "properties": {
+                                        "access_token": {
+                                            "type": "string",
+                                            "description": "The access token provided by the OAuth API",
+                                            "example": "eyJhbGciOiJIUzI1NiIsIn..."
+                                        },
+                                        "scope": {
+                                            "type": "string",
+                                            "description": "allowed scope to access the protected API",
+                                            "example": "read"
+                                        },
+                                        "expires_in": {
+                                            "type": "integer",
+                                            "description": "Token expiration time in seconds",
+                                            "example": 3600
+                                        },
+                                        "token_type": {
+                                            "type": "string",
+                                            "description": "Type of the token (e.g., Bearer)",
+                                            "example": "Bearer"
+                                        }
+                                    }
                                 }
                             }
                         }
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequestError"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UnauthorizedError"
+                    },
+                    "403": {
+                        "$ref": "#/components/responses/ForbiddenError"
+                    },
+                    "408": {
+                        "$ref": "#/components/responses/TimeOutError"
                     },
                     "500": {
                         "$ref": "#/components/responses/InternalServerError"
