# src/routes/api.js
@@ -1,30 +1,60 @@
 const express = require("express");
 const checkJwt = require("../middleware/checkJwt");
+const { getOAuthToken } = require("../middleware/apiService");
 const { NotFoundError } = require("../utils/customError");
 
 const router = express.Router();
 
 /**
  * @swagger
- * /:
+ * /getAccessToken:
  *   get:
- *     summary: Public Endpoint
- *     description: This endpoint is publicly accessible and returns a simple message.
+ *     summary: Fetch OAuth Token
+ *     description: This endpoint calls an external OAuth token API to fetch an access token and returns it.
  *     tags: [Public Endpoints]
  *     responses:
  *       '200':
- *         description: Successful response
+ *         description: Successful response with OAuth token data
  *         content:
- *           text/plain:
+ *           application/json:
  *             schema:
- *               type: string
- *               example: Public Endpoint
+ *               type: object
+ *               properties:
+ *                 access_token:
+ *                   type: string
+ *                   description: The access token provided by the OAuth API
+ *                   example: "eyJhbGciOiJIUzI1NiIsIn..."
+ *                 scope:
+ *                   type: string
+ *                   description: allowed scope to access the protected API
+ *                   example: "read"
+ *                 expires_in:
+ *                   type: integer
+ *                   description: Token expiration time in seconds
+ *                   example: 3600
+ *                 token_type:
+ *                   type: string
+ *                   description: Type of the token (e.g., Bearer)
+ *                   example: "Bearer"
+ *       '400':
+ *         $ref: '#/components/responses/BadRequestError'
+ *       '401':
+ *         $ref: '#/components/responses/UnauthorizedError'
+ *       '403':
+ *         $ref: '#/components/responses/ForbiddenError'
+ *       '408':
+ *         $ref: '#/components/responses/TimeOutError'
  *       '500':
  *         $ref: '#/components/responses/InternalServerError'
  */
-router.get("/", (req, res, next) => {
+router.get("/getAccessToken", async (req, res, next) => {
+  /* istanbul ignore next */
   try {
-    res.send("Public Endpoint");
+    // Call the service to get the OAuth token
+    const data = await getOAuthToken();
+
+    // Send the response data back to the client
+    res.json(data);
   } catch (ex) {
     next(ex);
   }
@@ -61,8 +91,8 @@ router.get("/", (req, res, next) => {
  *         $ref: '#/components/responses/InternalServerError'
  */
 router.get("/v1", checkJwt, (req, res, next) => {
+  /* istanbul ignore next */
   try {
-    // res.send(`I am acessing one Protected Endpoint. Hello, ${req.user.sub}!`);
     res.json(req.user);
   } catch (ex) {
     next(ex);
